# Change log

Date          Version   Comment
2016/02/06    0.9.5     Add basic support for exporting books to Word.
2016/02/06    0.9.4     Handle Word 2013 and LibreOffice files better.
2016/01/20    0.9.3     Clean up spans to omit default text colour, remove underline from links.
2016/01/07    0.9.2     Handle case where Word file has no Heading 1 styles.
2016/01/07    0.9.1     Re-instate some debugging to avoid errors.
2016/01/07    0.9.0     Support subchapters using Heading 2 styles, and embedded images.
2016/01/06    0.1.0     Support splitting Word files into chapters using Heading 1 style as delimiter.
2015/12/22    0.0.2     Initial working version.