@@ -1,6 +1,7 @@
 # Change log
 
 Date          Version   Comment
+2016/02/08    0.9.6     Add support for images when exporting books to Word.
 2016/02/06    0.9.5     Add basic support for exporting books to Word.
 2016/02/06    0.9.4     Handle Word 2013 and LibreOffice files better.
 2016/01/20    0.9.3     Clean up spans to omit default text colour, remove underline from links.
